hphp/test/slow/object_property/713.php.expectf
HipHop Fatal error: Cannot access empty property in %s/hphp/test/slow/object_property/713.php on line 3
